fix: use mockery mocks and validator field details, clean comments
